mavensmate/Fabrication/deploy/kalho13@gmail.com/2014-05-14 14:26:31/unpackaged/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Estimate__c</fullName>
        <label>Budget Estimate</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fabrciation_Rollup_Minutes__c</fullName>
        <label>Fabrication Rollup Minutes</label>
        <summarizedField>Job_Part__c.Fabrication_Hours_Used__c</summarizedField>
        <summaryForeignKey>Job_Part__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fabricated_Total_Parts__c</fullName>
        <label>Fabricated Total Parts</label>
        <summarizedField>Job_Part__c.Quantity__c</summarizedField>
        <summaryForeignKey>Job_Part__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fabrication_Estimated_Hours__c</fullName>
        <label>Fabrication Estimated Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabrication_Estimated_Pounds_Per_Hour__c</fullName>
        <formula>Weight_of_Current_Releases__c /  Fabrication_Estimated_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabrciation Estimated Pounds Per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabrication_Pounds_Per_Hour__c</fullName>
        <formula>Fabrication_Weight_Complete__c /  (Fabrciation_Rollup_Minutes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabrication Pounds Per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabrication_Projected_Job_Hours__c</fullName>
        <formula>Weight_of_Current_Releases__c  / Fabrication_Pounds_Per_Hour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabrication Projected Job Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabrication_Quantity_Complete__c</fullName>
        <formula>Fabricated_Total_Parts__c - Fabrication_Quantity_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabrication Quantity Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabrication_Quantity_Remaining__c</fullName>
        <label>Fabrication Quantity Remaining</label>
        <summarizedField>Job_Part__c.Fabrication_Quantity_Remaining__c</summarizedField>
        <summaryForeignKey>Job_Part__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fabrication_Used_Hours__c</fullName>
        <formula>Fabrciation_Rollup_Minutes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabrication Used Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabrication_Weight_Complete__c</fullName>
        <description>The weight of all parts that have been completed for this job</description>
        <label>Fabrication Weight Complete</label>
        <summarizedField>Job_Part__c.Fabrication_Weight_Complete__c</summarizedField>
        <summaryForeignKey>Job_Part__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fabrication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fabrication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R &amp; D</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paint_Complete__c</fullName>
        <label>Paint Complete</label>
        <summarizedField>Job_Part__c.Rollup_Paint_Complete__c</summarizedField>
        <summaryForeignKey>Job_Part__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Paint_Quantity__c</fullName>
        <label>Paint Quantity</label>
        <summarizedField>Job_Part__c.Paint_Quantity__c</summarizedField>
        <summaryForeignKey>Job_Part__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Paint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Items_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remaining Items Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Complete__c</fullName>
        <label>Shipping Complete</label>
        <summarizedField>Job_Part__c.Shipping_Complete__c</summarizedField>
        <summaryForeignKey>Job_Part__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipping_Quantity__c</fullName>
        <label>Shipping Quantity</label>
        <summarizedField>Job_Part__c.Shipping_Quantity__c</summarizedField>
        <summaryForeignKey>Job_Part__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weight_All_Releases__c</fullName>
        <label>Weight All Releases</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_of_Current_Releases__c</fullName>
        <label>Weight of Current Releases</label>
        <summarizedField>Job_Part__c.Weight_All_Parts__c</summarizedField>
        <summaryForeignKey>Job_Part__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Fabrication_Estimated_Hours__c</columns>
        <columns>Fabrication_Projected_Job_Hours__c</columns>
        <columns>Fabrication_Estimated_Pounds_Per_Hour__c</columns>
        <columns>Fabricated_Total_Parts__c</columns>
        <columns>Fabrication_Quantity_Complete__c</columns>
        <columns>Weight_of_Current_Releases__c</columns>
        <columns>Fabrication_Weight_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>